minikube/python-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    # Indicates this was generated by kompose, which converts Docker Compose files into Kubernetes manifests
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    # Label used by other services to search for the pods in this deployment
    io.kompose.service: python-app
  name: python-app
spec:
  # our deploy will create a replica set tasked with maintaining exactly one pod instance
  # it will attempt to keep at least one pod available at all times in order to replace
  # the managed pod quickly if it fails or is deleted.
  replicas: 1
  selector:
    matchLabels:
      # the deployment will manage all the pods w/ this label and try to keep exactly one
      # running via the replica set. The label will also allow the cluster to apply policies
      # such as networking rules to these pods
      io.kompose.service: python-app
      io.kompose.network/flask-default: "true"
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: python-app
        io.kompose.network/flask-default: "true"
    spec:
      containers:
        - image: redis-flask-app:1.0.1
          # ie this image is local, so you shouldn't try to pull it from a registry
          # alternatives are Always and IfNotPresent
          imagePullPolicy: Never
          name: python-app
          ports:
            - containerPort: 5000
          resources: {}
        - name: redis
          image: redis:alpine
          ports:
            - containerPort: 6379
      restartPolicy: Always
status: {}
