minikube/flask-default-networkpolicy1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: flask-default
spec:
  # only let pods labeled as flask-default access each other
  podSelector:
    matchLabels:
      io.kompose.network/flask-default: "true"
